# Plastic-adjust

./: CMakeLists.txt  README.md  input.json  input2.json  input3.json  input5.json  input_2.json  input_CapF2DS12.json  input_CapF2DS14.json  input_CapF2DSfindRcp14.json  input_Hyd.json  input_Oed.json  input_Oed8.json  input_cap.json
Inputdata/: CP03Triaxial.txt  CP05Triaxial.txt  CP07Triaxial.txt  CP08Oedometric.txt  CP0901Hydrostatic.txt  CP10Triaxial.txt  CP12Hydrostatic.txt  CP13Oedometric.txt  CP14Oedometric.txt  CP15Oedometric.txt
cmake/Modules/: FindNLopt.cmake
exp_data/: CP08.txt  CP14.txt
src/: StubFunctions.cpp  StubFunctions.h  TElasticAdjust.cpp  TElasticAdjust.h  TF1Adjust.cpp  TF1Adjust.h  TF1DSAdjust.cpp  TF1DSAdjust.h  TF2DSAdjust.cpp  TF2DSAdjust.h  TF2DSAdjust_DW.cpp  TF2DSAdjust_DW.h  TF2DSAdjust_R.cpp  TF2DSAdjust_R.h  TF2DSAdjust_R_RHW.cpp  TF2DSAdjust_R_RHW.h  TMohrAdjust.cpp  TMohrAdjust.h  main.cpp  telasticmodel.cpp  telasticmodel.h
